--- a/style.css
+++ b/style.css
@@ -125,10 +125,12 @@ body {
 
 .output h1{
     font-size: 2.75rem;
+    font-weight: 800;
 }
 .output h1 span{
     color: var(--purple);
     margin-right: .1rem;
+    font-weight: 800;
 }
 /* Media queries for mobile screen */
 
